--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,12 +4,12 @@
 }
 
 .container {
-  width: 100%;
-  height: 2000px;
+  width: 200px;
+  height: 200px;
   display: block;
   position: absolute;
-  background-image: url("./img/70222.jpeg");
+  background-image: url("../img/70222.jpeg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: rgba (204, 204, 204, 0.8);
+  background-color: red;
 }
