--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,8 +4,8 @@
 }
 
 .container {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: 100vh;
   display: block;
   position: absolute;
   background-image: url("../img/70222.jpeg");
