--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,3 +13,11 @@
   background-repeat: no-repeat;
   background-color: red;
 }
+
+.middle_row {
+  background-color: black;
+  height: 283px;
+  width: 100%;
+  margin-top: 29vh;
+  margin-bottom: 29vh;
+}
