--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,15 +3,17 @@
   border: 0;
 }
 
+body {
+  background-image: url("../img/70222.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .container {
   width: 100%;
   height: 100vh;
   display: block;
   position: absolute;
-  background-image: url("../img/70222.jpeg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: red;
 }
 
 .middle_row {
@@ -20,4 +22,22 @@
   width: 100%;
   margin-top: 29vh;
   margin-bottom: 29vh;
+}
+
+.controller {
+  width: 38vw;
+  height: 35vh;
+  margin: 30px;
+  background-color: gray;
+  min-width: 200px;
+}
+
+.left {
+  float: left;
+  clear: right;
+}
+
+.right {
+  float: right;
+  clear: right;
 }
